images fixed and x overflow fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
 
 html {
+	max-width: 100%;
+    overflow-x: hidden;
 	font-size: 62.5%;
 	-webkit-font-smoothing: antialiased;
 	margin: 0;
